# StableNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
evaluation/: asymptotic_energy.py  avg_error.py  frequency.py  global_error.py  heat_dft_coefs.py  heat_diff_error.py  heat_energy.py  heat_global_error.py  heat_size.py  heat_state.py  kernel.py  plots_learning.py  short_term_error.py  spacetime.py  stable_freq.py
evaluation/matlab/: eigsign.m  extend_eigs.m  extend_proj.m  jacobian_layer.m  jacobian_mlp.m
src/: constants.hpp  defs.hpp  discretization.hpp  generator.hpp  heateqeval.hpp  helpers.hpp  main.cpp  mainheateq.cpp  mainoscillator.cpp  mainpendulum.cpp  pendulumeval.cpp  pendulumeval.hpp
src/evaluation/: asymptotic.hpp  evaluation.cpp  evaluation.hpp  lipschitz.cpp  lipschitz.hpp  renderer.cpp  renderer.hpp  stability.cpp  stability.hpp
src/nn/: activation.cpp  activation.hpp  antisymmetric.cpp  antisymmetric.hpp  convolutional.cpp  convolutional.hpp  dataset.cpp  dataset.hpp  extconv.hpp  hamiltonian.cpp  hamiltonian.hpp  hyperparam.cpp  hyperparam.hpp  inoutwrapper.hpp  loss.cpp  loss.hpp  lrscheduler.hpp  mlp.cpp  mlp.hpp  nnintegrator.hpp  nnmaker.cpp  nnmaker.hpp  tcn.cpp  tcn.hpp  train.hpp  utils.cpp  utils.hpp
src/systems/: harmonicoscillator.hpp  heateq.hpp  heateqsolver.hpp  odesolver.hpp  pendulum.hpp  rungekutta.hpp  serialization.hpp  state.hpp
src/visualisation/: renderer.cpp  renderer.hpp
